# my-patristics-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  entrypoint.sh  main.py  patristics.csv  pyproject.toml  vector.py
.github/workflows/: hf_space.yml  pip-audit.yml  zap_baseline.yml  zap_full_scan.yml
