[project]
name = "local-ai-agent-rag"
version = "0.1.0"
description = "Locally hosted Retrieval-Augmented Generation (RAG) agent powered by Ollama, LangChain, Chroma, and Gradio."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=6.6.0",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.0.1",
    "pandas>=3.0.1",
]
